--- a/[Python]PE_DS_I_1_Introduccion.ipynb
+++ b/[Python]PE_DS_I_1_Introduccion.ipynb
@@ -8,7 +8,7 @@
     "################## -- Programa de Especialización en Data Science Nivel I --############################\n",
     "############################################################################################\n",
     "\n",
-    "Autores : José Cárdenas - André Chávez "
+    "Autores : "
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(\"C:Users/Andre Chavez/Desktop/Data/train.csv\") \n",
+    "train = pd.read_csv(\"C:Users/xxx/Desktop/Data/train.csv\") \n",
     "# Leer el dataset en un dataframe usando pandas"
    ]
   },
