Update and rename ModelosRegresionAvanzados.ipynb to [Python]PE_DS_I_2_Modelos_Regresión_Avanzados.ipynb

--- a/[Python]PE_DS_I_2_Modelos_Regresión_Avanzados.ipynb
+++ b/[Python]PE_DS_I_2_Modelos_Regresión_Avanzados.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Modelos de Regresión Avanzados : Regresión Múltiple, Regresiones Penalizadas\n",
     "\n",
-    "Autores : José Cárdenas - André Chávez "
+    "Autores : "
    ]
   },
   {
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "vivienda=pd.read_excel('C:/Users/Andre Chavez/Desktop/Datos/PrecioVivienda.xlsx')"
+    "vivienda=pd.read_excel('C:/Users/xxx/Desktop/Datos/PrecioVivienda.xlsx')"
    ]
   },
   {
