Update Exportando un modelo de scikit-learn al disco con pickle.ipynb

--- a/Exportar modelo ML de sklearn al disco/Exportando un modelo de scikit-learn al disco con pickle.ipynb
+++ b/Exportar modelo ML de sklearn al disco/Exportando un modelo de scikit-learn al disco con pickle.ipynb
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un tiempo después... cargamos el modelo desde nuestro disco y sacamos el score"
+    "Un tiempo después... cargamos el modelo desde nuestro disco y sacamos el score (rb indica lectura)"
    ]
   },
   {
