--- a/Exportar modelo ML de sklearn al disco/Exportando un modelo de scikit-learn al disco con pickle.ipynb
+++ b/Exportar modelo ML de sklearn al disco/Exportando un modelo de scikit-learn al disco con pickle.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El siguiente ejemplo demuestra cómo puede entrenar un modelo de regresión logística usando el conjunto de datos de la diabetes en Pima India. Guardaremos el modelo en un archivo y lo cargaremos para hacer predicciones en el dataset test"
+    "El siguiente ejemplo demuestra cómo puede entrenar un modelo de regresión logística usando el conjunto de datos de la diabetes en Pima India. Guardaremos el modelo en un archivo y lo cargaremos para hacer evaluar el score usando el dataset test"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Guardamos el modelo en nuestro disco  (wb indica escritura)"
+    "Guardamos el modelo en nuestro disco  (**wb** indica escritura)"
    ]
   },
   {
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un tiempo después... cargamos el modelo desde nuestro disco y sacamos el score (rb indica lectura)"
+    "Un tiempo después... cargamos el modelo desde nuestro disco y sacamos el score (**rb** indica lectura)"
    ]
   },
   {
@@ -440,6 +440,14 @@
     "loaded_model = pickle.load(open(filename, 'rb'))\n",
     "result = loaded_model.score(X_test, Y_test)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fuente**: \n",
+    "https://machinelearningmastery.com/save-load-machine-learning-models-python-scikit-learn/"
    ]
   }
  ],
